# KAUMA

./: .gitignore  README.md  helper.py  json.json  kauma  kauma.py  kauma_conditional_mp.py  polysort.json  pyproject.toml  test.json  test.py  tests  tests.py
common/: __init__.py  common.py  tests.py
json/: divtest.json  divtest3.json  gcm_crack.json  gfpoly_ddf.json  gfpoly_ddf_solution.json  gfpoly_edf.json  gfpoly_sff.json  lol.json  padding_oracle.json  test.json  timecompare3.json
tasks/: gcm.py  gcm_pwn.py  gfmul.py  padding_oracle_crack.py  parse.py  parser_mp.py  poly.py  polynom.py  polynom_perf.py  sea.py  server.py  test.py  xex.py
